// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SnapshotTest/> renders correctly SnapshotTest 1`] = `
<div>
  loading...
</div>
`;

exports[`<SnapshotTest/> renders correctly SnapshotTest after fetch data 1`] = `
<div>
  3333
</div>
`;
